fix: upload photo dialog fixes on mobile view

--- a/src/modules/gallery/components/album-card/album-card.module.scss
+++ b/src/modules/gallery/components/album-card/album-card.module.scss
@@ -2,6 +2,7 @@
 @use '@/styles/utils';
 
 .root {
+  @apply border border-gray-light md:border-2 md:border-transparent;
   position: relative;
   display: flex;
   width: 100%;
@@ -12,7 +13,7 @@
   row-gap: 0.75rem;
   cursor: pointer;
   transition: variables.$transition-ultrafast;
-  border: 2px solid transparent;
+  //border: 2px solid transparent;
   background-color: #fff;
 
   &:hover {
