--- a/src/modules/gallery/components/album-details/album-details.module.scss
+++ b/src/modules/gallery/components/album-details/album-details.module.scss
@@ -3,21 +3,12 @@
 @use '@/styles/variables.module';
 
 .root {
+  position: relative;
   width: 100%;
-}
-
-.trigger {
-  @include mixins.phone {
-    bottom: utils.spacing(20);
-  }
 }
 
 .content {
   margin-top: utils.spacing(2);
-}
-
-.btnBack {
-  margin-right: auto;
 }
 
 .spinnerContainer {
